# vending_machine_app

./: .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python-tests.yml
vending_machine_django/: db.sqlite3  manage.py
vending_machine_django/accounts/: admin.py  forms.py  models.py  urls.py  views.py
vending_machine_django/accounts/migrations/: 0001_initial.py  0002_product_order.py  0003_rename_vending_machine_vendingmachine.py
vending_machine_django/accounts/templates/accounts/: dashboard.html  main.html  navbar.html  remove.html  vending_machine.html
vending_machine_django/accounts/tests/: test_models.py
vending_machine_django/vending_machine_django/: asgi.py  settings.py  urls.py  wsgi.py
